<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/ToolbarHelp"
        android:title="@string/ToolbarHelpText"
        android:icon="@drawable/help"
        android:orderInCategory="0"
        app:showAsAction="always" />

    <item android:id="@+id/ToolbarHome"
        android:title="@string/ToolbarHomeText"
        android:icon="@drawable/home"
        android:orderInCategory="1"
        app:showAsAction="always" />

    <item android:id="@+id/ToolbarGetImage"
        android:title="@string/ToolbarGetImageText"
        android:icon="@drawable/download"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/ToolbarGallery"
        android:title="@string/ToolbarGalleryText"
        android:icon="@drawable/gallery"
        android:orderInCategory="2"
        app:showAsAction="always" />

    <item android:id="@+id/ToolbarSettings"
        android:title="@string/ToolbarSettingsText"
        android:icon="@drawable/settings"
        android:orderInCategory="3"
        app:showAsAction="ifRoom" />

</menu>