<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GetImageActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/MainToolBar"
        app:title="@string/GetImageTitle"
        tools:openDrawer="start" />

    <androidx.drawerlayout.widget.DrawerLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/MainNavigationDrawer"
        tools:openDrawer="start">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/DateSelection">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/DateInput"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/SelectDateButton"
                    android:inputType="date"
                    android:hint="@string/DateInputHint" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="fill_horizontal"
                    android:id="@+id/SelectDateButton"
                    android:text="@string/SelectDateButtonText" />
            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/FetchImageButton"
                android:text="@string/FetchImageButtonText" />

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:progressBarStyleHorizontal"
                android:visibility="gone"
                android:id="@+id/DownloadProgressBar" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/ImageList" />

        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/navigation_header"
            app:menu="@menu/navigation_menu"
            android:id="@+id/MainNavigation" />
    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>