<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/MainToolBar"
        app:title="@string/HomeTitle"
        tools:openDrawer="start" />

    <androidx.drawerlayout.widget.DrawerLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/MainNavigationDrawer"
        tools:openDrawer="start">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/HomeBannerText"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:id="@+id/HomeImage"
                android:src="@drawable/noimage"
                android:minHeight="200dp"
                android:maxHeight="200dp"
                android:minWidth="200dp"
                android:maxWidth="200dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/HomeImageTitle"
                android:textSize="18sp"
                android:textAlignment="center" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/DownloadTodayButton"
                android:text="@string/HomeDownloadTodayButtonText"
                android:visibility="gone" />

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/DownloadProgressBar"
                android:visibility="gone"
                style="?android:progressBarStyleHorizontal" />

        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/navigation_header"
            app:menu="@menu/navigation_menu"
            android:id="@+id/MainNavigation" />

    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>